--- a/frontend/src/components/shared/custom-dropdown.module.css
+++ b/frontend/src/components/shared/custom-dropdown.module.css
@@ -8,7 +8,7 @@
 }
 
 .customDropdownContainerActive {
-  z-index: 1000;
+  z-index: 9999;
 }
 
 .customDropdownButton {
